--- a/styles/style.css
+++ b/styles/style.css
@@ -28,6 +28,14 @@ body{
     color: rgba(0, 0, 0, 50%);
 }
 
+.btn{
+  background-color: #E95A08;
+  width: 270px;
+  height: 50px;
+  border: none;
+  color: white;
+}
+
 /* navbar style */
 .navbar{
     display: flex;
@@ -70,6 +78,12 @@ body{
     max-width: 570px;
 }
 
+main{
+    max-width: 1140px;
+    text-align: center;
+    margin: 150px auto;
+}
+
 /* plants style  */
 .plants{
     margin-top: 120px;
@@ -82,8 +96,37 @@ body{
 }
 .plants-discription{
     margin-top: 5px;
-    margin-left: 276px;
-    margin-right: 276px;
+    margin-left: 126px;
+    margin-right: 126px;
+}
+/* card style  */
+.card{
+    max-width: 270px;
+    max-height: 484px;
+    
+}
+.card-item{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+    margin: 49px auto;
+    justify-items: center;
+
+}
+.card-btn{
+    font-size: 16px;
+}
+.name{
+    font-size: 22px;
+    font-weight: 200;
+    margin-top: 20px;
+    margin-bottom: 0px;
+}
+.cost{
+    font-size: 22px;
+    font-weight: bold;
+    margin-top: 15px;
+    margin-bottom: 20px;
 }
 
 @media screen and (max-width: 576px) {
