--- a/styles/style.css
+++ b/styles/style.css
@@ -36,12 +36,14 @@ body{
     color: rgba(0, 0, 0, 50%);
 }
 
+
 .btn{
-  background-color: #E95A08;
-  width: 270px;
-  height: 50px;
-  border: none;
-  color: white;
+  background-color: rgba(233, 90, 8, 1);
+    color: white;
+    padding: 19px 75px;
+    font-size: 1.03rem;
+    font-weight: 600;
+    border: none;
 }
 .btn:hover {
     cursor: pointer;
@@ -150,7 +152,7 @@ main{
     margin-bottom: 20px;
 }
 
-/* Plant-Lover section style */
+/* Plant-Lover style */
 .plants-lover{
     max-width: 1140px;
     margin: 200px auto 100px;
@@ -192,7 +194,7 @@ main{
     text-align: center;
     margin-bottom:100px ;
 }
-.deal-title-Latest{
+.deal-title{
     text-align: center;
     font-size: 3.125rem;
     font-weight: bold;
@@ -269,14 +271,14 @@ main{
     background-image: url("../assets/news-letter-bg.png");
     background-repeat: no-repeat;
     background-position: top left;
-    width: 100%;
+    width: 1440px;
     height: 533px;
     text-align: center;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 0;
+    margin-left: -115px;
     color: white; 
     margin-top: 120px; 
 }
@@ -300,7 +302,7 @@ main{
 }
 
 /* Footer Style */
-.Div-footer{
+.footer-container{
     padding: 50px 150px;
     display: flex;
     justify-content: space-around;
@@ -309,21 +311,24 @@ main{
     font-size: 1.375rem;
     font-weight: 400;
 }
-.Div-footer > div {
+.footer-container > div {
     flex: 1;
 }
-.footer-column-2 li,a ,.footer-column-3 li, a{
+.column-1{
+    margin-right: 110px;
+}
+.column-2 li,a ,.column-3 li, a{
     list-style: none;
     text-decoration: none;
 }
-.footer-column-2 li,.footer-column-3 li{
+.column-2 li,.column-3 li{
     margin-bottom: 25px;
 }
-.footer-column-4{
+.column-4{
     display: flex;
     justify-content: space-around;
 }
-.footer-column-4 img{
+.column-4 img{
     width: 10%;
     height: 10%;
 }
@@ -366,7 +371,7 @@ main{
        margin:auto 28px;
     }
     .card img{
-        width: 100%;
+        max-width: 100%;
         height: auto;
     }
     .card-item{
@@ -404,67 +409,66 @@ main{
 
     .latest-deal-image-container{
         flex-direction: column;
-     }
-     .deal-card-3{
+        align-items: center;
+    }
+    .deal-card-3{
         background-size: 100%;
         width: 360px;
         height: 195px;
-     }
+    }
 
-     .latest-deal-image-container{
+    .latest-deal-image-container{
         gap: 0;
-     }
-     .deal-card-3 h3{
-    font-size: 1rem;
-     }
-     .deal-card-3 a{
-    font-size: 1.25rem;
-     }
-     .deal-title-Latest{
-    font-size: 1.5rem;
-}
-.deal-description{
-    font-size: 0.875rem;
-}
-.deal-content{
-    text-align: center;
-    margin-bottom: 50px ;
-}
+    }
+    .deal-card-3 h3{
+       font-size: 1rem;
+    }
+    .deal-card-3 a{
+       font-size: 1.25rem;
+    }
+    .deal-title-Latest{
+      font-size: 1.5rem;
+    }
+    .deal-description{
+      font-size: 0.875rem;
+    }
+    .deal-content{
+      text-align: center;
+      margin-bottom: 50px ;
+    }
 
-.join-brunch-content{
-    background-size:393px 275px;
-    width:393px;
-    height: 275px;
-    margin-top:0;
-}
-.join-brunch-title{
-    font-size: 1.25rem;
-    margin-bottom: 15px;
-}
-.email-input{
-    width: 218px;
-    margin-right: 0;
-    border: 0;
-    border-radius: 0;
-}
-.btn-subs{
-    padding: 15px 10px;
-    font-size: 1rem;
-    
-}
-.input-form{
-    display: flex;
-}
+    .join-brunch-content{
+      background-size:393px 275px;
+      width:393px;
+      height: 275px;
+      margin-top:0;
+      margin-left: 4px;
+    }
+    .join-brunch-title{
+       font-size: 1.25rem;
+       margin-bottom: 15px;
+    }
+    .email-input{
+       width: 140px;
+       margin-right: 0;
+       border: 0;
+       border-radius: 0;
+    }
+    .btn{
+       padding: 15px 10px;
+       font-size: 1rem;
+    }
+    .input-form{
+       display: flex;
+    }
 
-.Div-footer{
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    margin-top: 50px;
-    margin-bottom: 20px;
-}
-
-
+    .footer-container{
+       padding: 0;
+       display: flex;
+       flex-direction: column;
+       margin-top: 50px;
+       margin-bottom: 20px;
+    }
 }
 
 
